fix: user-block centering on tablet

--- a/components/layout/MobileMenu/MobileMenu.module.css
+++ b/components/layout/MobileMenu/MobileMenu.module.css
@@ -109,11 +109,6 @@
     width: 335px;
     margin: 16px auto 0;
   }
-
-  .actions {
-    justify-content: flex-start;
-    margin-top: 32px;
-  }
 }
 
 @media screen and (min-width: 1440px) {
