--- a/components/layout/UserBar/UserBar.module.css
+++ b/components/layout/UserBar/UserBar.module.css
@@ -70,6 +70,8 @@
 @media screen and (min-width: 768px) {
   .mobile {
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     gap: 32px;
   }
 
